fix: stretch wrapper divs exactly for 100% in height
Stretch divs for 100% heigh - not for more (without scrollbar appearing)

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,6 @@
 .page-margins-wrapper {
-  margin: 0.75rem 0.5rem;
+  height: 100%;
+  margin: 0;
+
+  padding: 0.75rem 0.5rem;
 }
