--- a/src/app/login-form/login-form.component.css
+++ b/src/app/login-form/login-form.component.css
@@ -1,5 +1,5 @@
 .centering-wrapper {
-  min-height: 100vh;
+  height: 100%;
   margin: 0;
 
   display: flex;
